--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="google-site-verification" content="PCHy4KGp0QsfDh_tGYIMQdihxRWS-QIU3Kd5SkjKWj0" />
     
     <title>Sharath H N | Software Developer - GECH Hassan & Bengaluru</title>
     
